--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat-app",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://<your-github-username>.github.io/<your-repo-name>",
+  "homepage": "https://https://github.com/RipMickel.https://github.com/RipMickel/React_App",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
