--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "chat-app",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://https://github.com/RipMickel.https://github.com/RipMickel/React_App",
+  "homepage": "https://RipMickel.github.io/React_App"
+,
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
@@ -12,14 +13,15 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+"scripts": {
+  "start": "react-scripts start",     
+  "build": "react-scripts build",     
+  "predeploy": "npm run build",      
+  "deploy": "gh-pages -d build",    
+  "test": "react-scripts test",        
+    "eject": "react-scripts eject"       
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
